# django-celery-results

./: .bumpversion.cfg  .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  AUTHORS  CONTRIBUTING.md  Changelog  LICENSE  MANIFEST.in  Makefile  README.rst  compose.yml  conftest.py  manage.py  pyproject.toml  sait  setup.cfg  setup.py  tox.ini
.github/workflows/: codeql-analysis.yml  test.yaml
django_celery_results/: __init__.py  admin.py  apps.py  camera.py  conf.py  humanize.py  managers.py  models.py  picklefield.py  settings.py  urls.py  utils.py  views.py
django_celery_results/backends/: __init__.py  cache.py  database.py
django_celery_results/locale/es/LC_MESSAGES/: django.mo
django_celery_results/locale/fr/LC_MESSAGES/: django.mo  django.po
django_celery_results/locale/pt_BR/LC_MESSAGES/: django.mo  django.po
django_celery_results/locale/ru/LC_MESSAGES/: django.mo  django.po
django_celery_results/locale/zh_Hans/LC_MESSAGES/: django.mo  django.po
django_celery_results/migrations/: 0001_initial.py  0002_add_task_name_args_kwarg.py  0002_add_task_name_args_kwargs.py  0002_add_task_result_task_args.py  0002_taskresult_task.py  0002_taskresult_task_name.py  0002_tasksetmeta.py  0003_auto_20181106_1101.py  0003_taskresult_task_kwargs.py  0003_tasksetmeta.py  0004_auto_20190506_0140.py  0004_auto_20190506_0255.py  0004_auto_20190516_0412.py  0004_taskresult_task_args.py  0005_taskresult_worker.py  0005_verbose_names.py  0006_auto_20190724_1636.py  0006_taskresult_date_created.py  0008_chordcounter.py  0008_groupresult.py  0009_groupresult.py  0010_auto_20210416_1502.py  0010_auto_20210616_1213.py  0010_remove_duplicate_indices.py  0011_taskresult_periodic_task_name.py  0012_alter_default_auto_field_big_auto_field.py  0012_alter_taskresult_status.py  0013_alter_taskresult_status.py  0014_alter_taskresult_status.py  0015_chordcounter_new_sub_tasks_taskresult_new_meta_and_more.py  0016_make_copy_of_taskresult_textfields.py  0017_make_copy_of_chordcounter_textfields.py  0018_remove_chordcounter_new_sub_tasks_and_more.py
django_celery_results/models/: __init__.py  abstract.py  generic.py  helpers.py  managers.py
django_celery_results/tests/: test_models.py
django_celery_results/tests/backends/: test_cache.py  test_database.py
docker/: Dockerfile
docs/: Makefile  conf.py  configuration.rst  copyright.rst  extending_task_results.rst  getting_started.rst  index.rst  injecting_metadata.rst  make.bat
docs/includes/: installation.txt  introduction.txt
docs/reference/: django-celery-results.rst  index.rst
docs/templates/: readme.txt
locale/ru/LC_MESSAGES/: django.po
locale/zh_Hans/LC_MESSAGES/: django.po
requirements/: default.txt  docs.txt  pkgutils.txt  test-ci.txt  test-django.txt  test-django111.txt  test-django21.txt  test-django22.txt  test-django30.txt  test-django31.txt  test-django32.txt  test-django40.txt  test-django41.txt  test-django42.txt  test-django50.txt  test-django51.txt  test-django52.txt  test-django60.txt  test.txt
t/: conftest.py
t/integration/: benchmark_models.py
t/proj/: db_routers.py  settings.py  wsgi.py
t/unit/: test_admin.py  test_migrations.py  test_models.py  test_utils.py  test_views.py
t/unit/backends/: test_cache.py  test_database.py
testproj/testproj/: settings.py
