[project]
name = "django-celery-results"
description = "Celery result backends for Django."
keywords = ["celery", "django", "database", "result", "backend"]
dynamic = [
    "version",
    "dependencies",
    "optional-dependencies",
    "entry-points",
    "authors",
    "classifiers",
    "readme",
    "license",
]

[project.urls]
Documentation = "https://django-celery-results.readthedocs.io/en/latest/"
Changelog = "https://django-celery-results.readthedocs.io/en/latest/changelog.html"
Repository = "https://github.com/celery/django-celery-results"

[build-system]
requires = ["setuptools>=82", "wheel", "build"]
build-backend = "setuptools.build_meta"
